# data-discovery-agent

./: .airflowignore  .env.example  .gitignore  ANALYTICAL-INSIGHTS.md  ARTIFACT_REGISTRY_SETUP.md  CHANGELOG.md  DATAPLEX_INTEGRATION_COMPLETE.md  DATAPLEX_WORKING.md  DOCKER_BUILD_SUMMARY.md  Dockerfile  GEMINI-DESCRIPTIONS.md  LABEL_FILTERING.md  QUICK-REFERENCE.md  README.md  SAMPLE-VALUES-UPDATE.md  SECURITY.md  check_lineage_results.sh  composer-requirements.txt  docker-compose.yml  env_template.txt  example_usage.py  pyproject.toml  pytest.ini  test_vertex_search.py  test_wildcard.py
.cursor/plans/: add-dataset-region-support-104d97ef.plan.md  data-planning-agent-6b9f587d.plan.md  (+8 more)
dags/: metadata_collection_dag.py
docs/: ACLS.md  ARCHITECTURE.md  DATA_DISCOVERY_AGENT_WORKFLOW.md  DOCKER_DEPLOYMENT.md  END_TO_END_ARCHITECHTURE.md  MCP_CLIENT_GUIDE.md  PHASE1_VERTEX_SEARCH.md  PHASE2_METADATA_COLLECTION.md  PIPELINE_SETUP.md  STRATEGY_DRIVEN_DISCOVERY_ARCHITECTURE.md  todos.md
examples/: http_client_example.py  mcp_client_example.py  phase1_complete_example.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml  serviceaccount.yaml
scripts/: backfill_dataset_region.py  collect-bigquery-metadata.py  create-dataplex-scan.sh  create-dataplex-scans-bulk.py  data-discovery-agent.code-workspace  debug-mcp-server.sh  deploy-genai-toolbox.sh  deploy-to-composer.sh  push-to-artifact-registry.sh  run-docker-mcp.sh  run-mcp-server.sh  setup-infrastructure.sh  setup-vertex-search.sh  teardown.sh  test-search.py  validate-setup.sh
terraform/: .gitignore  ARTIFACT_REGISTRY.md  QUICKSTART.md  README.md  artifact-registry.tf  composer.tf  main.tf  monitoring.tf  outputs.tf  secrets.tf  service-accounts.tf  storage.tf  terraform.tfvars.example  tfvars.example  variables.tf  versions.tf
tests/: __init__.py  conftest.py  test_agent.py  test_prp_discovery.py
(+98 files in other folders)
