[tool.poetry]
name = "data-discovery-agent"
version = "0.1.0"
description = "An ADK agent that profiles data in a dataset and dynamically creates context for the data"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "data_discovery_agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
google-adk = "^0.3.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
pydantic = "^2.0.0"
google-cloud-bigquery = "^3.11.0"
google-cloud-storage = "^2.10.0"
google-cloud-discoveryengine = "^0.11.0"
google-cloud-datacatalog = "^3.11.0"
google-cloud-dataplex = "^1.6.0"
google-cloud-dlp = "^3.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

